# Cryptobot_Rust

./: Cargo.toml  Untitled Diagram.drawio
src/: book.rs  client.rs  main.rs  order.rs  server.rs  socket.rs
